unpackaged/objects/WW_Event__c.object
<CustomObject>
    <description>This holds the information of the place, time and details of the event</description>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Benerficiaries__c</fullName>
        <label>Number of Beneficiaries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Andhra Pradesh</fullName>
                </value>
                <value>
                    <fullName>Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>Bihar</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
                <value>
                    <fullName>Karnataka</fullName>
                </value>
                <value>
                    <fullName>Kerala</fullName>
                </value>
                <value>
                    <fullName>Madhya Pradesh</fullName>
                </value>
                <value>
                    <fullName>Maharastra</fullName>
                </value>
                <value>
                    <fullName>Orissa</fullName>
                </value>
                <value>
                    <fullName>Tamil Nadu</fullName>
                </value>
                <value>
                    <fullName>Telangana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WW_Event_Date__c</fullName>
        <description>Date on which the event takes place</description>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>